Fix broken *EqualsAndHashCodeTest after renaming package