@@ -1,9 +1,10 @@
 package fr.awildelephant.rdbms.execution.aggregation;
 
 import nl.jqno.equalsverifier.EqualsVerifier;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.reflections.Reflections;
 
@@ -11,19 +12,17 @@ import java.util.Collection;
 import java.util.stream.Stream;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
-@Disabled
 class AggregateEqualsAndHashCodeTest {
 
-    private static Collection<Object[]> parameters() {
+    private static Collection<Arguments> parameters() {
         return implementationsOfAggregate()
-                .map(type -> new Object[]{type.getSimpleName(), type})
-                .collect(toList());
+                .map(type -> Arguments.of(Named.named(type.getSimpleName(), type)))
+                .toList();
     }
 
     private static Stream<Class<? extends Aggregate>> implementationsOfAggregate() {
-        return new Reflections("fr.awildelephant.rdbms.plan.aggregation")
+        return new Reflections("fr.awildelephant.rdbms.execution.aggregation")
                 .getSubTypesOf(Aggregate.class)
                 .stream()
                 .sorted(comparing(Class::getSimpleName))
@@ -33,7 +32,7 @@ class AggregateEqualsAndHashCodeTest {
     @DisplayName("All implementations of Aggregate should implement equals and hashCode")
     @ParameterizedTest(name = "{index} - {0}")
     @MethodSource("parameters")
-    void all_implementations_of_Aggregate_should_implement_equals_and_hashCode(String className, Class<? extends Aggregate> implementationOfAggregate) {
+    void all_implementations_of_Aggregate_should_implement_equals_and_hashCode(Class<? extends Aggregate> implementationOfAggregate) {
         EqualsVerifier.forClass(implementationOfAggregate).verify();
     }
 }
