@@ -1,9 +1,10 @@
 package fr.awildelephant.rdbms.execution.arithmetic;
 
 import nl.jqno.equalsverifier.EqualsVerifier;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Named;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.reflections.Reflections;
 
@@ -12,21 +13,19 @@ import java.util.Set;
 import java.util.stream.Stream;
 
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
-@Disabled
 class ValueExpressionEqualsAndHashCodeTest {
 
     private static final Set<Class<?>> TO_TEST = Set.of(ConstantExpression.class, OuterQueryVariable.class, Variable.class);
 
-    private static Collection<Object[]> parameters() {
+    private static Collection<Arguments> parameters() {
         return implementationsOfExpression()
-                .map(type -> new Object[]{type.getSimpleName(), type})
-                .collect(toList());
+                .map(type -> Arguments.of(Named.named(type.getSimpleName(), type)))
+                .toList();
     }
 
     private static Stream<Class<? extends ValueExpression>> implementationsOfExpression() {
-        return new Reflections("fr.awildelephant.rdbms.plan.arithmetic")
+        return new Reflections("fr.awildelephant.rdbms.execution.arithmetic")
                 .getSubTypesOf(ValueExpression.class)
                 .stream()
                 .sorted(comparing(Class::getSimpleName))
@@ -36,7 +35,7 @@ class ValueExpressionEqualsAndHashCodeTest {
     @DisplayName("Test equals and hashCode for some implementations of ValueExpression")
     @ParameterizedTest(name = "{index} - {0}")
     @MethodSource("parameters")
-    void it_should_implement_equals_and_hashCode(String className, Class<? extends ValueExpression> implementationOfExpression) {
+    void it_should_implement_equals_and_hashCode(Class<? extends ValueExpression> implementationOfExpression) {
         EqualsVerifier.forClass(implementationOfExpression).verify();
 
     }
